Correcting video filename bug

--- a/views/videoplayer.jade
+++ b/views/videoplayer.jade
@@ -3,4 +3,4 @@ extends layout
 block content
   h1= title
   video#video-player(preload='metadata', controls)
-    source(src='/videos/'+filename, type='video/mp4')
+    source(src='/videos/'+videoname, type='video/mp4')
