Moving files, cleaning up, adding 'indoor' page

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -11,9 +11,11 @@ html
     link(rel='stylesheet', href='/vendor/fixed-nav.css')
   body
     header
-      a.logo(href='/') Now
+      a.logo(href='/') Outdoor
       nav.nav-collapse
         ul
+          li.menu-item
+            a(href='/indoor') Indoor
           li.menu-item
             a(href='/timelapse/24-hours') Last 24 hours
           li.menu-item
